src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/C4A54.cd
package de.monticore.umlcd4a.cocos.mcg.invalid;

classdiagram C4A54 {
  public private class A;

  public protected class B;
  
  private protected class C;
  
  private public protected class D;
  
  class C_A {
    public private String a;
    public protected String b;
    private protected String c;
    private public protected String d;
  }
}
